power: Fix signed/unsigned assignment and comparison

The value retrieved from GSettings is a gint, so don’t implicitly cast
to to a guint before clamping it to a non-negative value.

Coverity ID: 1418248

https://bugzilla.gnome.org/show_bug.cgi?id=780587